<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_xdc_icon"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:text="@string/xdc3_android"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/header"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/new_account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/header"
        android:textSize="16sp"
        android:text="@string/password"
        android:layout_marginStart="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/hint"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:textSize="16sp"

        android:hint="@string/enter_xdc_password" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/create"
        android:id="@+id/create"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="39dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/background"
        android:textAllCaps="false"
        android:textSize="16sp"/>


</LinearLayout>