<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lin_reademethod"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/textView104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="Read events of Token"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/txt_tokenuri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/turi"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_balanceof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/balance_off"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_ownerbyindex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/townerbyindex"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"

        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />
    <TextView
        android:id="@+id/txt_tokenbyindex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/tbyindex"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_ownerof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/ownerof"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_getapproved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/getApproved"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_isapprovedforall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:text="@string/isapprovedForAll"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_supportinterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"

        android:text="@string/supportinterface"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_totalsupply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_border1"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_20"
        android:text="@string/total_supply"
        android:padding="@dimen/margin_10"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="18dp" />


   <!-- <Button
        android:id="@+id/button17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_input1"
        android:backgroundTint="@color/highlight"
        android:fontFamily="@font/saira_semibold"
        android:padding="@dimen/margin_15"
        android:paddingStart="10dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/button" />
-->

</LinearLayout>