<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_xdc_icon"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:text="@string/xdc3_android"/>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/hint"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:textSize="16sp"

        android:hint="@string/enter_xdc_address_here" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/background"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/header"
        android:textSize="16sp"
        android:text="@string/select_from_list"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerSpinnerLayout"
        android:layout_marginTop="7dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/customerTextView"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_border"
            android:layout_height="wrap_content"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="15dp"
      android:text="@string/submit"
      android:id="@+id/submit"
      android:layout_marginStart="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="39dp"
      android:textColor="@color/white"
      android:backgroundTint="@color/background"
      android:textAllCaps="false"
      android:textSize="16sp"/>


</LinearLayout>